gitops/clusters/homelab/infra/pve/proxmox-lan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-lan-ingress
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: proxmox-lan-transport@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: pve1.local.nasbenito.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve1-service
            port: {number: 8006}
  - host: pve2.local.nasbenito.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve2-service
            port: {number: 8006}
  - host: pve3.local.nasbenito.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve3-service
            port: {number: 8006}
