gitops/clusters/homelab/infra/pve/proxmox-lan.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve1-svc
  namespace: traefik
spec:
  ports: [{name: https, port: 443, targetPort: 8006}]
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve1-svc
  namespace: traefik
subsets:
  - addresses: [{ip: "192.168.110.11"}]
    ports: [{port: 8006}]
---
apiVersion: v1
kind: Service
metadata:
  name: pve2-svc
  namespace: traefik
spec:
  ports: [{name: https, port: 443, targetPort: 8006}]
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve2-svc
  namespace: traefik
subsets:
  - addresses: [{ip: "192.168.110.12"}]
    ports: [{port: 8006}]
---
apiVersion: v1
kind: Service
metadata:
  name: pve3-svc
  namespace: traefik
spec:
  ports: [{name: https, port: 443, targetPort: 8006}]
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve3-svc
  namespace: traefik
subsets:
  - addresses: [{ip: "192.168.110.13"}]
    ports: [{port: 8006}]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-lan-ingress
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-proxmox-lan-transport@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "*.local.nasbenito.com"
      secretName: wildcard-local-nasbenito-com-tls
  rules:
  - host: pve1.local.nasbenito.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve1-svc
            port: {number: 443}
  - host: pve2.local.nasbenito.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve2-svc
            port: {number: 443}
  - host: pve3.local.nasbenito.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve3-svc
            port: {number: 443}
